# proteopy

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yaml  AGENTS.md  HISTORY.md  MANIFEST.in  README.md  THIRD_PARTY_LICENSES  pyproject.toml  setup.py
.claude/agents/: agent-instruction-writer.md  docstring-writer.md  proteopy-pair-programmer.md  ruthless-code-reviewer.md  unit-test-architect.md
.github/ISSUE_TEMPLATE/: internal--feature-requests.md
.github/workflows/: format-code_perform-tests_on_push-pr.yaml  format_tests_on_push_pr.yaml
copro/: __init__.py  copro.py
copro/ann/: __init__.py  base_anndata.py  generic.py  proteins.py
copro/datasets/: karayel_2020.py
copro/get/: __init__.py  proteoforms.py
copro/pl/: __init__.py  copf.py  intensities.py  obs.py  peptides.py  plot_proteoforms.py  proteoforms.py  stat_tests.py  statistics.py  statistics_var.py  stats.py  utils.py
copro/pp/: __init__.py  copro.py  filtering.py  imputation.py  normalization.py  obs.py  peptides.py  stats.py  var.py
copro/read/: __init__.py  diann.py  long.py  np_custom.py  peptides_generic.py  proteins_generic.py
copro/tl/: __init__.py  copf.py  copro.py  quantify.py  stat_tests.py
copro/utils/: __init__.py  anndata.py  data_structures.py  functools.py  helpers.py  pandas.py  parsers.py  string.py
data/: contaminants_ccp-crap_2025-12-12.fasta  contaminants_ccp-crap_2025-12-12_unfiltered.fasta  contaminants_maxquant_v2.7.5.0.fasta
docs/sphinx/: Makefile  requirements.txt
docs/sphinx/source/: acknowledgements.rst  changelog.md  community.rst  conf.py  contributing.rst  contributors.rst  index.rst  installation.rst  references.bib  references.rst
docs/sphinx/source/_static/: custom.css  custom.js
docs/sphinx/source/_templates/autosummary/: class.rst  function.rst
docs/sphinx/source/api/: ann.rst  datasets.rst  download.rst  get.rst  index.rst  pl.rst  pp.rst  read.rst  tl.rst  utils.rst
docs/sphinx/source/api/manual/: ccp-crap.rst  frankenfield2022.rst  gpm-crap.rst  maxquant.rst
docs/sphinx/source/news/: 2026-02-09_release.rst  2026-03-03_welcome-levente.rst  2026-03-31_preprint.rst  index.rst
docs/sphinx/source/tutorials/: bludau-2021_tissue-specific-proteoform-inference-across-five-mouse-organs.ipynb  index.rst  karayel-2020_proteome-remodeling-during-human-erythropoiesis.ipynb  proteodata_basics.ipynb  proteoform-inference_bludau-2021_reproduction.ipynb  workflow_protein-analysis_karayel-2020.ipynb
docs/tutorials/: bludau-2021_tissue-specific-proteoform-inference-across-five-mouse-organs.ipynb  karayel-2020_proteome-remodeling-during-human-erythropoiesis.ipynb  proteodata_basics.ipynb  proteoform-inference_bludau-2021_reproduction.ipynb  workflow_protein-analysis_karayel-2020.ipynb  workflow_proteoform-inference_bludau-2021.ipynb
proteopy/: __init__.py
proteopy/ann/: base_anndata.py
proteopy/datasets/: __init__.py  karayel_2020.py  williams_2018.py
proteopy/download/: __init__.py  contaminants.py  karayel_2020.py  williams_2018.py
proteopy/get/: __init__.py  proteoforms.py  stat_tests.py
proteopy/pl/: __init__.py  clustering.py  copf.py  intensities.py  sequence.py  stat_tests.py  stats.py
proteopy/pp/: __init__.py  filtering.py  imputation.py  normalization.py  quantification.py  stats.py
proteopy/read/: diann.py  long.py
proteopy/tl/: __init__.py  clustering.py  copf.py  stat_tests.py
proteopy/utils/: __init__.py  anndata.py  array.py  functools.py  pandas.py  parsers.py  stat_tests.py  string.py
requirements/: requirements_ci-cd.txt
tests/: test_copro.py
tests/data/mouse_tissue/: traces_cluster-dendograms_rcopf.json  traces_clustered_rcopf.json
tests/datasets/: test_karayel_2020.py  test_williams_2018.py
tests/download/: test_karayel_2020.py  test_williams_2018.py
tests/pp/: test_filtering.py  test_quantification.py
tests/read/: test_long.py  test_peptides_generic.py  test_proteins_generic.py
tests/tl/: test_copro.py
tests/utils/: data_structures.py  helpers.py  test_anndata.py
