[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'proteopy'
version = '0.1.0'
description = 'Analysis of bottom-up mass-spectrometry proteomics data.'
readme = 'README.md'
requires-python = '>=3.10'
license = {file = 'LICENSE'}
authors = [
	{name = "Ian Dirk Fichtner", email = "iandirk.fichtner@med.uni-heidelberg.de"},
	{name = "Isabell Bludau", email = "Isabell.Bludau@med.uni-heidelberg.de"}
]

[project.urls]
Homepage = "https://github.com/UKHD-NP/proteopy"
#Documentation = ""

dependencies = [
    'adjustText',
    'anndata',
    'matplotlib',
    'numpy',
    'pandas',
    'pooch',
    'scikit-learn',
    'scipy',
    'seaborn',
    'statsmodels',
    ]

[project.optional-dependencies]
dev = [
    'flake8',
    'ipykernel',
    'jupyterlab',
    'nb_conda',
    'pooch',
    'pre-commit',
    'pylint',
    'pytest',
    ]

usage = [
    'ipykernel',
    'jupyterlab',
    'nb_conda',
    'openpyxl',
    'pooch',
    'python_igraph',
    'scanpy',
    ]

[tool.setuptools.packages.find]
include = ['proteopy*']
