[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteopy"
version = "0.1.0"
description = "Analysis of bottom-up mass-spectrometry proteomics data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Framework :: Pytest",
    "Framework :: Sphinx",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*", "THIRD_PARTY_LICENSES"]
authors = [
	{name = "Ian Dirk Fichtner", email = "iandirk.fichtner@med.uni-heidelberg.de"},
	{name = "Isabell Bludau", email = "Isabell.Bludau@med.uni-heidelberg.de"}
]
keywords = [
    "proteomics",
    "mass-spectrometry",
    "bioinformatics",
    "proteoforms",
    "data-analysis",
    "anndata",
]

dependencies = [
    "adjustText",
    "anndata",
    "biopython",
    "matplotlib",
    "numpy",
    "pandas",
    "pooch",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    ]

[project.optional-dependencies]
dev = [
    "bump2version",
    "flake8",
    "ipykernel",
    "jupyterlab",
    "pre-commit",
    "myst_parser",
    "nbsphinx",

    "pylint",
    "pytest",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib-bibtex",
    "sphinx-rtd-theme",
    "sphinx>=7.0",
    "twine",
    ]

usage = [
    "ipykernel",
    "jupyterlab",
    "openpyxl",
    "python_igraph",
    "scanpy",
    ]

[tool.setuptools.packages.find]
include = ["proteopy*"]

[project.urls]
Homepage = "https://github.com/UKHD-NP/proteopy"
Issues = "https://github.com/UKHD-NP/proteopy/issues"
Documentation = "https://proteopy.readthedocs.io/en/stable"
Repository = "https://github.com/UKHD-NP/proteopy.git"
